feat: Add Zod Schema Collection
