# backend/routes/auth.route.js
@@ -3,7 +3,7 @@ import authController from '../controllers/auth.controller.js';
 const authRoute = Router();
 
 // authRoute.get('/users', authController.getAllUsers)
-authRoute.post('/login', authController.login)
+authRoute.post('/login', authController.loginUser)
 // authRoute.post('/signup', authController.signUp)
 // authRoute.post('/logout', authController.logout)
 // authRoute.post('/refreshToken', authController.refreshToken)
